# vulkan-lib

./: .gitignore  .gitmodules  CMakeLists.txt  config.yaml  readme.md  vertex.spv
cmake/: CXX23Modules.cmake  VulkanConfig.cmake
src/vulkan-lib/: App.cpp  App.ixx  Camera3D.ixx  Commands.ixx  Config.h  Descriptors.ixx  Device.ixx  Engine.cpp  Engine.ixx  Framebuffer.ixx  Image.ixx  Instance.ixx  Logging.ixx  Memory.ixx  Mesh.ixx  Pipeline.ixx  Queue_families.ixx  Render_structs.ixx  Result.hpp~  Result.ixx  Scene.cpp  Scene.ixx  Shader.ixx  Swapchain.ixx  SwapchainFrame.ixx  Sync.ixx  VertexManager.cpp  VertexManager.ixx  compile_shader.bat  fragment.spv  main.cpp  shader.frag  shader.vert
